--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
